<resources>
    <string name="app_name">CronoAgua</string>
    <string name="name_question">Nome:</string>
    <string name="weight_question">Peso:</string>
    <string name="age_question">Idade:</string>
    <string name="name_text">Nome</string>
    <string name="weight_text">Peso</string>
    <string name="age_text">Idade</string>
    <string name="text_climate_in_your_home">Qual o clima no local onde mora:</string>
    <string name="text_very_hot">Muito quente</string>
    <string name="text_hot">Quente</string>
    <string name="text_cold">Frio</string>
    <string name="content_water_drop">Gota de água</string>
    <string name="text_physical_activity">Prática atividade física:</string>
    <string name="button_save">Salvar</string>
    <string name="msg_save_action_failed">Verifique se todos os campos estão preenchidos e o clima selecionado.</string>
    <string name="menu_title_user_profile">Usuário</string>
    <string name="menu_title_config">Configurações</string>
    <string name="logo_description">Logotipo do app: gota de água</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_description">Voltar</string>
    <string name="text_switch_configuration">Habilitar a notificação inteligente:</string>
    <string name="text_switch_vibrate">Habilitar vibrar ao notificar:</string>
    <string name="text_wakeUp">Hora em que acorda:</string>
    <string name="text_toSleep">Hora em que dorme:</string>
    <string name="content_spinner_wakeUp">Selecionar horário em que acorda</string>
    <string name="content_spinner_toSleep">Selecionar horário em que dorme</string>
    <string name="text_remain">Restam</string>
    <string name="button_drink">BEBER</string>
    <string name="next_drink">Próximo gole em %s</string>
    <string name="time_to_drink">Hora de beber!</string>
    <string name="is_done_daily">Parabéns! Você atingiu o objetivo de hoje :)</string>
    <string name="is_first_time">O dia começa bem melhor nos mantendo hidratado. Beba seu primeiro copo do dia :)</string>
    <string name="is_time_exhaust">Poxa já faz um tempo que você não toma água, mas não tem problema, beba agora :)</string>

    <!--  Notification  -->
    <string name="notification_title">Hora de se hidratar</string>
    <string name="notification_text">Já está na hora de tomar mais um copo!</string>
    <string name="notification_channel_id">notification_watter</string>
    <string name="notification_channel_title">CronoAgua</string>
    <string name="notification_group_key">com.gmail.devpelegrino.cronoagua.ui.WaterManagementFragment</string>

</resources>